feat(Day2) Branchless-Programming Solution

--- a/Advent-Of-Code-2022.vcxproj
+++ b/Advent-Of-Code-2022.vcxproj
@@ -140,9 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Src\Day-1\Day1.h" />
+    <ClInclude Include="Src\Day-2\Day2.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Input\Day1.txt" />
+    <Text Include="Input\Day2.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Main.cpp" />
