--- a/Advent-Of-Code-2022.vcxproj.filters
+++ b/Advent-Of-Code-2022.vcxproj.filters
@@ -18,9 +18,13 @@
     <ClInclude Include="Src\Day-1\Day1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Day-2\Day2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Input\Day1.txt" />
+    <Text Include="Input\Day2.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Main.cpp">
