--- a/Advent-Of-Code-2022.vcxproj
+++ b/Advent-Of-Code-2022.vcxproj
@@ -142,11 +142,13 @@
     <ClInclude Include="Src\Day-1\Day1.h" />
     <ClInclude Include="Src\Day-2\Day2.h" />
     <ClInclude Include="Src\Day-3\Day3.h" />
+    <ClInclude Include="Src\Day-4\Day4.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Input\Day1.txt" />
     <Text Include="Input\Day2.txt" />
     <Text Include="Input\Day3.txt" />
+    <Text Include="Input\Day4.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Main.cpp" />
