--- a/Advent-Of-Code-2022.vcxproj.filters
+++ b/Advent-Of-Code-2022.vcxproj.filters
@@ -27,12 +27,16 @@
     <ClInclude Include="Src\Day-4\Day4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Day-5\Day5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Input\Day1.txt" />
     <Text Include="Input\Day2.txt" />
     <Text Include="Input\Day3.txt" />
     <Text Include="Input\Day4.txt" />
+    <Text Include="Input\Day5.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Main.cpp">
